# applications/service/src/main/kotlin/hwr/oop/examples/template/service/Controller.kt
@@ -2,9 +2,7 @@ package hwr.oop.examples.template.service
 
 import hwr.oop.examples.template.service.api.GameReadApi
 import hwr.oop.examples.template.service.api.GameWriteApi
-import hwr.oop.examples.template.service.model.CreateGameRequest
-import hwr.oop.examples.template.service.model.GameCreatedResponse
-import hwr.oop.examples.template.service.model.GameResponse
+import hwr.oop.examples.template.service.model.*
 import jakarta.validation.Valid
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
@@ -17,6 +15,41 @@ class Controller : GameReadApi, GameWriteApi {
 	}
 	
 	override fun createGame(createGameRequest: @Valid CreateGameRequest?): ResponseEntity<GameCreatedResponse> {
+		TODO("Not yet implemented")
+	}
+	
+	override fun playCard(
+		gameId: String?,
+		playCardRequest: @Valid PlayCardRequest?,
+	): ResponseEntity<GameResponse> {
+		TODO("Not yet implemented")
+	}
+	
+	override fun announce(
+		gameId: String?,
+		announcementRequest: @Valid AnnouncementRequest?,
+	): ResponseEntity<GameResponse> {
+		TODO("Not yet implemented")
+	}
+	
+	override fun proposeContract(
+		gameId: String?,
+		proposeContractRequest: @Valid ProposeContractRequest?,
+	): ResponseEntity<GameResponse> {
+		TODO("Not yet implemented")
+	}
+	
+	override fun passOnContractPropose(
+		gameId: String?,
+		passOnContractsRequest: @Valid PassOnContractsRequest?,
+	): ResponseEntity<GameResponse> {
+		TODO("Not yet implemented")
+	}
+	
+	override fun acceptArmut(
+		gameId: String?,
+		acceptArmutRequest: @Valid AcceptArmutRequest?,
+	): ResponseEntity<GameResponse> {
 		TODO("Not yet implemented")
 	}
 	
